--- a/handson-ml-linear-models.ipynb
+++ b/handson-ml-linear-models.ipynb
@@ -1,6 +1,145 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# To support both python 2 and python 3\n",
+    "from __future__ import division, print_function, unicode_literals\n",
+    "\n",
+    "# Common imports\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# to make this notebook's output stable across runs\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# To plot pretty figures\n",
+    "%matplotlib inline\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rcParams['axes.labelsize'] = 14\n",
+    "plt.rcParams['xtick.labelsize'] = 12\n",
+    "plt.rcParams['ytick.labelsize'] = 12\n",
+    "\n",
+    "# Where to save the figures\n",
+    "PROJECT_ROOT_DIR = \".\"\n",
+    "CHAPTER_ID = \"training_linear_models\"\n",
+    "\n",
+    "def save_fig(fig_id, tight_layout=True):\n",
+    "    path = os.path.join(PROJECT_ROOT_DIR, \"images\", CHAPTER_ID, fig_id + \".png\")\n",
+    "    print(\"Saving figure\", fig_id)\n",
+    "    if tight_layout:\n",
+    "        plt.tight_layout()\n",
+    "    plt.savefig(path, format='png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Regression using the normal Equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Start by looking at the Linear Regression model, \\none of the simplest models there is. \\nWe will discuss two very different ways to train it: Using a direct “closed-form” equation that directly \\ncomputes the model parameters that best fit the model to the training set (i.e., the model parameters \\nthat minimize the cost function over the training set). Using an iterative optimization approach, \\ncalled Gradient Descent (GD), that gradually tweaks the model parameters to minimize the cost \\nfunction over the training set, eventually converging to the same set of parameters as the first method. \\nWe will look at a few variants of Gradient Descent that we will use again and again when we study neural \\nnetworks in Part\\xa0II: Batch GD, Mini-batch GD, and Stochastic GD.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"Start by looking at the Linear Regression model, \n",
+    "one of the simplest models there is. \n",
+    "We will discuss two very different ways to train it: Using a direct “closed-form” equation that directly \n",
+    "computes the model parameters that best fit the model to the training set (i.e., the model parameters \n",
+    "that minimize the cost function over the training set). Using an iterative optimization approach, \n",
+    "called Gradient Descent (GD), that gradually tweaks the model parameters to minimize the cost \n",
+    "function over the training set, eventually converging to the same set of parameters as the first method. \n",
+    "We will look at a few variants of Gradient Descent that we will use again and again when we study neural \n",
+    "networks in Part II: Batch GD, Mini-batch GD, and Stochastic GD.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X = 2 * np.random.rand(100, 1)\n",
+    "y = 4 + 3 * X + np.random.randn(100, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEVCAYAAAARjMm4AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAG2tJREFUeJzt3X20ZXdd3/H3d+7kySQ8JUNE9GYqApagTZqr7QSLKQ/F\nUK3UFEUeJiyKg9CISGVhlokMmUiqttXVFRSG5hEfEEvEhRWrQaZEMhFuuqAhq5jaSNIYk05CJJOQ\nTB7m2z/OueTk5ty7z8Pev73POe/XWnfN3HP23ft79t13f/bv99sPkZlIkrSZLW0XIEnqPsNCklTJ\nsJAkVTIsJEmVDAtJUiXDQpJUybCQJFUyLCRJlQwLSVKlrW0XUOXEE0/M7du3t12GJM2UG2644e7M\n3FbX/DofFtu3b2d1dbXtMiRppkTErXXOz24oSVIlw0KSVMmwkCRVMiwkSZUMC0lSJcNCklTJsJAk\nVTIsJEmVDAtJUqVawyIizo2I1Yg4FBFXbDDNL0RERsTL6ly2JKk5dd/u4w7gIuAVwDHr34yI5wCv\nBv625uVKkhpUa8siM6/OzI8D92wwyfuBdwMP17lcSVKzio1ZRMSrgUOZ+UellilJqkeRu85GxPHA\n+4CXjzj9LmAXwPLycoOVSZJGUaplsRv4cGZ+ZZSJM3NvZq5k5sq2bbXdjl2SNKFSYfFS4O0RcWdE\n3Al8G/DRiHh3oeVLkqZQazdURGztz3MJWIqIo4FH6YXFEQOTfh54J/DJOpcvSWpG3S2L84EHgZ8D\nXt////mZeU9m3rn2BTwG3JuZ99e8fElSA2ptWWTmbnrjE1XTba9zuZKkZnm7D0lSJcNCklTJsJAk\nVTIsJEmVDAtJUiXDQpJUybCQJFUyLCRJlQwLSVIlw0KSVMmwkCRVMiwkSZUMC0lSJcNCklTJsJAk\nVTIsJEmVDAtJUiXDQpJUybCQJFWqNSwi4tyIWI2IQxFxxcDr/zgi/jQivhoRByLi9yLiWXUuW5LU\nnLpbFncAFwGXrXv96cBeYDtwMnAQuLzmZUuSGrK1zpll5tUAEbECfOvA658cnC4iLgH+e53LliQ1\np60xixcDN7W0bEnSmGptWYwiIr4b+AXghzeZZhewC2B5eblQZZKkjRRtWUTEdwCfBH46M6/daLrM\n3JuZK5m5sm3btnIFSpKGKhYWEXEycA2wJzM/XGq5kqTp1doNFRFb+/NcApYi4mjgUeAk4M+ASzLz\nA3UuU5LUvLrHLM4H3jPw/euB9wIJfDuwOyJ2r72ZmcfVvHxJUgPqPnV2N7B7g7ffW+eyJEnleLsP\nSVIlw0KSVMmwkCRVMiwkSZUMC0lSJcNCkhqyfz9cfHHv31lX/N5QkrQI9u+Hl74UHn4YjjwSPvUp\n2LGj7aomZ8tCkhqwb18vKB57rPfvvn1tVzQdWxaS1IAzz+y1KNZaFmeeWWa5+/evBdPxx9Y5X8NC\nkhqwY0ev62nfvl5QlOiCGuz6guc+r855GxbSHFk7qiy1c9Lmduwo+3sY7PoCos55GxbSnJi3AVWN\nZvAAYbDr67HHyDqX4wC3NCfmbUBV1dYOEC64oPcv9A4S9uwB+N8317ksw0KaE2tHlUtLZQdUZ90s\nXwsx7ABhxw447zyAgw/UuSy7oaQ50caA6qybxa67jbqdmj5AMCykOVJ6QHXWbXRk3lXDwq3UAYJh\nIWlhtXUtxKSGhdt555UJOMNC0sLqUtfdWvfSCSfAPfcMr6fNcDMsJC20LnTdrXUvHToEhw/Dli1w\n1FHDx1DOOaf3786dZeuu9WyoiDg3IlYj4lBEXLHuvZdGxJcj4usR8emIOLnOZUvSrFrrXjp8uPf9\n4cNPPv15LVA+9CG48sryNdZ96uwdwEXAZYMvRsSJwNXABcAzgFXgd2tetiTNpLXupS39PfKWLU/u\nZmr7Oppau6Ey82qAiFgBvnXgrR8BbsrM3+u/vxu4OyK+MzO/XGcNkjRrBsdONhqzaHswvtSYxSnA\nF9e+ycwHIuKv+q8bFpLmxqT356oaO2l7ML5UWBwHHFj32n3A8cMmjohdwC6A5eXlZiuTpL5pb8TY\n9EV+VYEyWH/dSoXF/cBT1r32VODgsIkzcy+wF2BlZaXWm2FJ0jB17OjrvMhvWHDt3Qsf+xicfTbs\n2rV5/bP6PIubgHPWvomIY4Hn9F+XpNbVsaOva1xhWHDdeCO85S299//kT3r/DgbG+vrhKUN7biZV\n96mzWyPiaGAJWIqIoyNiK/D7wAsj4uz+++8BvujgtqSuqONGjGvjCnv2TNcFNSy4PvaxJ06z/vv1\n9cN9Q3tuJlV3y+J8ekGw5vXAezNzd0ScDVwC/CbwF8Bral62JE2srgHkaS/y278fbrsNtvb3zmvB\ndcIJj7cooNcVtX65g/WfcUa9d52NzG4PCaysrOTq6mrbZUhS4wa7n5aW4E1vgtNOe/xU2htv3HjM\nYr2IuCEzV+qqzdt9SFILhg1gr3ssKgDveMcTxy6qQqIphoUkFbbRmVfrB8ihO7dQ90l5klRhs6fp\nTfKkvY1u3bF+gHznztEG3Us87c+WhdSySS4Em/biMY1us+svJr02Y7NTbNcPkFcNupd62p9hIbVo\nkj/0WXwU6Czb7PqLSa/NGOfMq6qzq0o97c9uKKlFk9xJtO27j86TUbpvNrv+YpprM3bsqOcpd3Vc\nHzIKWxZSiya54rftu4/Oi3FaaBs9cKjtm/uVrMGwkFo0yR96F3ZQ82CU7pv1gbJz55Pn04Un7ZWo\nwbCQWjbJH3oXdlCzbpQWWqnxgFlgWEja0DyfdTVKC80uv8cZFtKcm3SHvwhnXXX9gUNdYlhIc2ya\nHX7Tz2YoaZrl2+XXY1hIc2yaHX6Tz2YoufOte/ltB98oeqcCP/ub65ynYSHNsWl2+HV1wbQ9SFx3\nC6nrXXNrNcI3P7vO+Y50UV5EfCAiMiK+Zch7z4+IhyPiP9VZmKTpTfswnjouHCt10Vgdy6+6SG8W\nLohcq7Fuo7Ys9gNvAb4X+Pi6934VuI8nPvRIUke03efe9iDxqMsfpdXQ1tlR43R9rdX44IP1Pqxo\n1LC4vv/vE8IiIv45cBbwbzLz3joLkzQ/uhBYVcsfpbtqWPA0PYYxbtfXWo1nnHHXHXXWMWpY3Ax8\nlV5YABARRwD/EfgS8ME6i5Kk0jZqNawPg8HgKTGGMcmYS+/9v7mzzjpGCovMzIi4HnhRRET2nsX6\n08DzgJdl5mObz0GaDbNwpouasVGrYbMwKDF435ULA8c5G+p64JXA8yPiq8AFwMcz81OjziAitgO/\nDuwADgH/BXhHZj46Rh1SI2bhTBc1a313VVUYlNiRtz3ms2acsFg7P+B7gRcDRwH/dszl/TpwAHgW\n8DTgT4G3AZ5Jpda1fYqnuqcqDErtyNse84HxwuJzwGHgzcCLgF/JzFvGXN7fAy7JzIeAOyPij4FT\nxpyH9CR1dB/NwpkupXW5tip11D5KGHRhR15EZo78BdwIJPC3wPHj/Gz/598CXAl8E/BseoPj/3Kz\nnzn99NNT2sx112Uec0zm0lLv3+uum25e73vfdPMYd3lrtR95ZOZP/mS5ZVepc72WNsu11wVYzTH3\n0Zt9jfukvM/1/z0vMw9OkE2fAV5I77qM24FVnnzdBhGxKyJWI2L1wIEDEyxGi6TOC6XqenrZqNbX\n/sEP9sZNNntyWymzcAHaRma59q4aOSz6p8qeSW8Hf+W4C4qILcAfA1cDxwInAk8Hfmn9tJm5NzNX\nMnNl27Zt4y5KC6btK4SnsVZ7RO/7zO7s3OZhvc5i7V0VOeJFfhFxHvCLwBmZeX3V9EN+/kR6g9tP\ny8yv9V97FXBRZr5wo59bWVnJ1dXVcRenBTPrfetXXQWXXw6PPtqtM7Fmfb3Oau11iIgbMnOltvlt\nFhYR8QzgFcB3A+8Cfi0zf3bihUXcQu8Cvv8AHAdcDjyYma/d6GcMi7Jm+Q+sK7VP8/yILtQ/rhJ1\nz+q6aVPdYVE1IP3j9Aa07wJ+BViaZoAEOBXYB9wL3A18FDhps59xgLucWR4U7ErtXamjlBKfd9HW\naV0oOcCdmb+TmZGZJ2Xmu3LKK7Uz8wuZeWZmPj0zT8zMH83Mu6aZp+ozy4OCXam9K3WUUuLzLto6\n7apxz4bSHJvlQcGu1N6VOqputV2XEp93kmWU+vyLZOQB7rY4ZlHWLPcNd6X2puoYdb6lb1vStTEL\nb9vSU/eYhU/K0xPM8tWoXam9iTrG2QGWvm3JtJ93lCAYZxnetqUZhoU21JUj9VnTxHobZwc47LYl\nXf1djhKC49belbu0zhvDQkN1oSnf1R3cZppab+PsANffzwja/11upCoEJ1mfXblL67wxLDRU2035\nLoTVJJpab+PuAAe7bS6+uLnf5bSBXhWCk67PrnRJzhPDQkO13ZQf5Yizi0eOTa63SXeATdVUR6BX\nhWDb26EeZ1jMibp3nm025ffvh9tug639rXP9TqLLrY4udoE0VVNdrajNQrCL63NRGRZzoKmdZxtN\n+cHPsrQEP/ETsHNn+UdZTqOLXSBN1FTqqL+L63MReVHeHJinK1wHP8tjj8Hy8sZdE21f+NYlbVyE\ntnbUv2dPt1p3aoYtizkwT/26o3wWuyaeqM1uOY/6F4dhMQfmaec56mepYyfV1UHycXW9W07zwbCY\nE/N0hFfis7RxNN5UOJVsWc5awM5avV1mWGghlT4aryOcNtrxbdQaq3tH2eWz0IaZtXq7zrDQQio9\nzjNtOFXt+Na3xprYUc5ad9es1dt1ng2lhVT6TJ5pz+Aa94y3Js6Qm7Wz0Gat3q6zZdGSRe5L7cpn\nLznOM+1JCOO2hJpoOc3aiRSzVm/X+TyLFixyX+oif/ZpjRuyXQlltcPnWcyBrvallti5dO2zt/2g\nonGM2xKapzPk1L7iYRERrwHeAywDdwJvzMxrS9fRpi5eRFfqiL8rn33/frjqKrjssl5w1fmZZ6n1\nZOtDoyoaFhHxcuCXgB8DPgc8q+Tyu6KLfamljvi78NnXduYPPQRrvbCHDsHu3b2vRTlraJZCTe0r\n3bJ4L3BhZl7f//5vCi+/M7rWRVDyiL/tz762M18Ligg4fBiuuQauvXb6nWZXWk9VZiXU1A3FTp2N\niCVgBdgWEX8VEbdHxCURcUypGrSxRbop3OAplUcdBd/zPbBlSy8w1loY09yQb1bWpaeWahzFzoaK\niG+h15K4Afgh4BHgD4B9mfnz66bdBewCWF5ePv3WW28tUqMWx2BfPfS6Yw4d6gXGli29EOnyjr4u\njlnMr7rPhioZFk8HvkpvQPvK/mtnA+dn5mkb/VxXT531j2y+7N/fa1Fcc00vMJaWei2D885ruzJp\nMjN76mxm3hsRtwOD6dTtizw24MDg/NmxoxcW117b/bEGqQ2lb/dxOfBTEfHMfkvjZ4A/LFzD1Lr8\nsKE2HoIzL9oYa/D3pVlR+myoPcCJwM3AQ8BHgV8sXMPUunq2S+kWzzx2xZU8U8sWqmZJ0bDIzEeA\nt/W/ZlYXrhUYpuSpkE3u6OYxhIbx1FXNEm/3MaG2rxUYpmSLp6kd3SIdbY/z+1qUAFV3GRZT6Nof\ncMkWT1PBtEhH26P+vhYpQNVdhsWEuvoHXKrF01QwdXU8qCmj/L4WKUDVXYbFhPwDnj6YhrXMujoe\n1KZFC1B1k2Exoab/gLvWxVW3zVpmXRwPapMBqi4wLCbU5B9wV7u46rQoLbO6Qt8AVdsMiyk09Qfc\nxI60ay2VRehaWYTQ1+IwLDqo7h1pF3dai9C1siitJy0Gw6KD6t6RjrvTKtUKmfeulUVoPWlxGBYd\nVeeOdNyLv7rWCplVi9B60uKYqbDoWr/7rBhnp2XXSb3mvfWkxTEzYTHuEa/B8kSj7rTsOpE0zMyE\nxThHvHalTM6uE0nDzExYjHPEa1fKdOw6kbTezITFOEe8dqVIUr1mJixg9CNeu1IkqV4zFRbDbDSQ\nbVeKJNVnpsOiroFsz5ySpM3NdFjUMZDtmVOSVG1LGwuNiOdGxEMR8ZvTzGdtIHtpafKB7GGBU2X/\nfrj44t6/krQI2mpZvB/4/LQzqWMge9wzp2yJSFpExcMiIl4D/B1wHfAd085v2oHscQPHazgkLaKi\nYRERTwEuBF4CvLnksjczTuBs1BJxkFzSPCvdstgDXJqZt0fEhhNFxC5gF8Dy8nKh0kYzrCVS1TVl\nkEiadcXCIiJOBV4GnFY1bWbuBfYCrKysZMOljW19S2SzrinHOCTNg5ItizOB7cBt/VbFccBSRLwg\nM/9h3QsreTS/2SC5YxyS5kHJsNgLfGTg+5+lFx5vrXtBpY/mNxsk9z5VkuZBsbDIzK8DX1/7PiLu\nBx7KzAN1L6uNo/mNBsm9T5WkedDaFdyZubupeXftaN77VEmadTN9u4+NeDQvSfWay7CAJx/Ne/qq\nJE1ubsNi0P79vZB45BE44gjPSJKkcbVyI8HSrrqqN36R2fv3qqvarkiSZstChMVmvIOsJFVbiG6o\nnTvh8ssfPztq587e615dLUmjWYiw2LEDPv3pJw9we3W1JI1mIcIChl/r0LXrMSSpqxYmLIbxegxJ\nGs1ChwV4dbUkjWLhz4aSJFWb27DwlFhJqs9cdkN5Sqwk1WsuWxbDTomVJE1uLsNi7ZTYpSVPiZWk\nOsxUN9Sod471lFhJqtfMhMW44xCeEitJ9ZmZbijHISSpPTMTFo5DSFJ7ioVFRBwVEZdGxK0RcTAi\nvhARZ43682vjEHv2eCqsJJVWcsxiK/B/ge8HbgNeCXw0Ir4rM78yygwch5CkdhQLi8x8ANg98NIf\nRsRfA6cDXylVhyRpfK2NWUTEScDzgJvaqkGSNJpWwiIijgB+C7gyM7885P1dEbEaEasHDhwoX6Ak\n6QmKh0VEbAE+DDwMnDtsmszcm5krmbmybdu2ovVJkp6s6EV5ERHApcBJwCsz85GSy5ckTab0Fdy/\nAfx94GWZ+WDhZUuSJlTyOouTgbcApwJ3RsT9/a/XlapBkjSZkqfO3gpEqeVJkuozM7f7kCS1x7CQ\nJFUyLCRJlQwLSVIlw0KSVMmwkCRVMiwkSZUMC0lSJcNCklTJsJAkVTIsJEmVDAtJUiXDQpJUybCQ\nJFUyLCRJlQwLSVIlw0KSVMmwkCRVMiwkSZWKhkVEPCMifj8iHoiIWyPitSWXL0mazNbCy3s/8DBw\nEnAq8F8j4ouZeVPhOiRJYyjWsoiIY4GzgQsy8/7M/HPgD4A3lKpBkjSZkt1QzwMezcybB177InBK\nwRokSRMo2Q11HHDfutfuA45fP2FE7AJ29b89FBFfari2OpwI3N12ESOwznrNQp2zUCNYZ92eX+fM\nSobF/cBT1r32VODg+gkzcy+wFyAiVjNzpfnypmOd9bLO+sxCjWCddYuI1TrnV7Ib6mZga0Q8d+C1\nfwA4uC1JHVcsLDLzAeBq4MKIODYivg/4F8CHS9UgSZpM6Yvy3gYcA/w/4LeBt45w2uzexquqh3XW\nyzrrMws1gnXWrdY6IzPrnJ8kaQ55uw9JUiXDQpJUqZWwGOceURHxMxFxZ0TcFxGXRcRRk8ynqRoj\n4pyIuKFf3+0R8csRsXXg/X0R8VBE3N//+su6ahyzzjdGxGMDddwfEWeOO58CdX5gXY2HIuLgwPtN\nr89zI2K1v9wrKqZta9scqcYObJuj1tn2tjlqna1tmxFxVERc2v/8ByPiCxFx1ibT179tZmbxL+B3\ngN+ld6He9wFfA04ZMt0rgLvoXeX9dGAf8O/GnU/DNb4V+CfAkcCzgRuAnxt4fx/w5g6syzcCfz7t\nfJquc8jPXQFcVnB9/gjwKuA3gCs2ma7NbXPUGtveNkets+1tc6Q629w2gWOB3cB2egf5P0jvGrXt\npbbNRjaSET70w8DzBl67avDDDLz+28D7Br5/CXDnuPNpssYhP/tO4BMFN6BR1+WGf5BNrstp5t//\nuYPA95dYn+uWfVHFDq6VbXOcGodMX2zbHHNdtrZtTro+29w2B5b3P4Gzh7zeyLbZRjfUOPeIOqX/\n3uB0J0XECWPOp8ka13sxT77Q8OKIuDsiPjvYvK7BuHWe1q/j5oi4YKBLoun7dk06/7OBA8Bn1r3e\n1PocR1vb5jRKbpvjamvbnFSr22ZEnERv3Qy79KCRbbONsBj5HlH9ab+2bjr6044znyZr/IaIeBOw\nAvz7gZffDXw7vW6AvcAnIuI5NdQ4bp2fAV4IPJPehv7jwLsmmE/TdQ46B7gq+4c/fU2uz3G0tW1O\npIVtcxxtbpuTam3bjIgjgN8CrszMLw+ZpJFts42wGPkeUUOmfWr/34NjzqfJGgGIiFcBFwNnZeY3\nbjKWmX+RmQcz81BmXgl8FnhlDTWOVWdm3pKZf52ZhzPzRuBC4F+NO5+m61wTEcvAmfSayN/Q8Poc\nR1vb5tha2jZH1vK2ObY2t82I2ELvrhcPA+duMFkj22YbYTHOPaJu6r83ON1dmXnPmPNpskYi4geA\nDwE/1N/YN5NA1FAjTLcOButo+r5dk8z/DcBnM/OWinnXuT7H0da2OZYWt81plNw2J9HKthkRAVxK\n7+FxZ2fmIxtM2sy2WWowZt0AzEfojcgfy+Zn8PwAcCfwAoaP6o80n4ZrfAlwD/DiIe89jd6ZCUfT\nu8Pv64AHGBhcKljnWcBJ/f9/J/Al4D0l1uUk8wf+EnhTC+tza3/+F9M7gjsa2NqxbXPUGtveNket\ns+1tc6Q6O7BtfgC4HjiuYrpGts1aPsQEH/oZwMf7K/M24LX915fpNZOWB6Z9J73TwO4DLgeOqppP\nyRqBTwOP9l9b+/pk/71twOfpNfH+rv+Lfnkb65JeX/Vd/eluodfUP6LEupzgd76jP93x6+ZRYn3u\npndEOPi1u2Pb5kg1dmDbHLXOtrfNcX7nrWybwMn9uh5a9/t8Xalt03tDSZIqebsPSVIlw0KSVMmw\nkCRVMiwkSZUMC0lSJcNCklTJsJAkVTIsJEmVDAtJUiXDQtpERBzTfyTpbYOPpuy/95/7jwN9TVv1\nSaUYFtImMvNB4D3AtwFvW3s9Ii4G/jXwU5n5kZbKk4rx3lBShYhYovc0sWfSe7jNm4FfpXdn1Avb\nrE0qxbCQRhARPwh8Avgz4J8Cl2Tm29utSirHsJBGFBH/AziN3vMAXpvr/ngi4keBtwOnAndn5vbi\nRUoNccxCGkFE/BiPP33s4Pqg6LsXuAT4+WKFSYXYspAqRMQ/o9cF9QngEeDVwHdl5v/aYPpXAb9m\ny0LzxJaFtImI+EfA1cBn6T2V7HzgML1HcEoLw7CQNhARLwD+iN5D7l+VmYcy8/8AlwI/HBEvarVA\nqSDDQhoiIpaB/0ZvHOKszLxv4O09wIPAL7dRm9SGrW0XIHVRZt5G70K8Ye/dAXxT2YqkdhkWUk36\nF+8d0f+KiDgayMw81G5l0vQMC6k+bwAuH/j+QeBWYHsr1Ug18tRZSVIlB7glSZUMC0lSJcNCklTJ\nsJAkVTIsJEmVDAtJUiXDQpJUybCQJFX6/xIeBJiX0D+vAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10bce2128>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.plot(X, y, \"b.\")\n",
+    "plt.xlabel(\"$x_1$\", fontsize=18)\n",
+    "plt.ylabel(\"$y$\", rotation=0, fontsize=18)\n",
+    "plt.axis([0, 2, 0, 15])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
