begin gradient descent

--- a/handson-ml-linear-models.ipynb
+++ b/handson-ml-linear-models.ipynb
@@ -116,6 +116,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Use the inv() function from linalg module to compute the inverse of a matrix, and the dot() method for matrix multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_b = np.c_[np.ones((100, 1)), X]  # add x0 = 1 to each instance\n",
+    "theta_best = np.linalg.inv(X_b.T.dot(X_b)).dot(X_b.T).dot(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.21509616],\n",
+       "       [ 2.77011339]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_best"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We would have hoped for 4 and 3 but noise made in impossible to recover the exact parameters of the original function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.21509616],\n",
+       "       [ 9.75532293]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_new = np.array([[0], [2]])\n",
+    "X_new_b = np.c_[np.ones((2, 1)), X_new]  # add x0 = 1 to each instance\n",
+    "y_predict = X_new_b.dot(theta_best)\n",
+    "y_predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#plot predictions\n",
+    "\n",
+    "plt.plot(X_new, y_predict, \"r-\")\n",
+    "plt.plot(X, y, \"b.\")\n",
+    "plt.axis([0, 2, 0, 15])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The normal equation computes the inverse of x^T x X, which is an n x n matrix(where n is the number of features). The normal equation gets very slow when the number of features grows large(e.g., 100,000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient descent is a very generic optimization algorithm capable of finding optimal solutions ot a wide range of problems. The general idea of gradient descent is to tweak parameters iteratively in order to minimize a cost function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Start by filling 0 with random values(random initialization) and then improve gradually, one step at a time, each stop attempting to decrease the cost function until algorithm converges to a minium. An important parameter in gradient descent is the size of the steps, determined by the learning rate hyperparameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the learning rate is too high, you might jump across the valley and end up on the other side, possibly even higher than you were before. This might make the algorithm diverge, with larger and larger values, failing to find a good solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
