--- a/ML Math.ipynb
+++ b/ML Math.ipynb
@@ -849,6 +849,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.dot(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  the * operator will perform an elementwise multiplication, NOT a dot product:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   [2 5]\n",
+      "*  [3 1] (NOT a dot product)\n",
+      "----------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 5])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"  \",u)\n",
+    "print(\"* \",v, \"(NOT a dot product)\")\n",
+    "print(\"-\"*10)\n",
+    "\n",
+    "u * v"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
